cluster/flux/networkpolicies/kustomize-controller.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kustomize-controller
  namespace: flux-system
spec:
  endpointSelector:
    matchLabels:
      app: kustomize-controller
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: kube-prometheus-stack-prometheus
            "k8s:io.kubernetes.pod.namespace": monitoring
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443" # kube api
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: notification-controller
            "k8s:io.kubernetes.pod.namespace": flux-system
        - matchLabels:
            app: source-controller
            "k8s:io.kubernetes.pod.namespace": flux-system
      toPorts:
        - ports:
            - port: "9090"
    - toEndpoints:
        - matchLabels:
            app: source-controller
            "k8s:io.kubernetes.pod.namespace": flux-system
        - matchLabels:
            app: notification-controller
            "k8s:io.kubernetes.pod.namespace": flux-system
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/component: webhook
            app.kubernetes.io/instance: cert-manager
            app.kubernetes.io/name: webhook
            "k8s:io.kubernetes.pod.namespace": cert-manager
        - matchLabels:
            app.kubernetes.io/instance: kube-prometheus-stack-prometheus
            app.kubernetes.io/managed-by: prometheus-operator
            app.kubernetes.io/name: prometheus
            "k8s:io.kubernetes.pod.namespace": monitoring
      toPorts:
        - ports:
            - port: "10250" # validationwebhook
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
