cluster/flux/networkpolicies/source-controller.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: source-controller
  namespace: flux-system
spec:
  endpointSelector:
    matchLabels:
      app: source-controller
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: kustomize-controller
            "k8s:io.kubernetes.pod.namespace": flux-system
        - matchLabels:
            app: helm-controller
            "k8s:io.kubernetes.pod.namespace": flux-system
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: kube-prometheus-stack-prometheus
            "k8s:io.kubernetes.pod.namespace": monitoring
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443" # kube-api
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: notification-controller
            "k8s:io.kubernetes.pod.namespace": flux-system
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
